--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.0.4",
+    "@angular/material": "^14.1.3",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "ngx-skeleton-loader": "^6.0.0",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
